# mrm_run_launch

./: CMakeLists.txt  README.md  package.xml
config/: lamp_robot_names.yaml  robot_configs_centralized.yaml  robot_configs_distributed.yaml  rssi_parameters.yaml
launch/: base_runtime.launch  husky_runtime.launch  uav_ego_planner.launch  uav_runtime.launch  uav_sequence_controller.launch  uav_sim_mocha.launch  ugv_cmu_planner.launch  ugv_gazebo.launch  ugv_runtime.launch  visual_tools.launch
models/: ego_test_obstacle.sdf
scripts/: ensure_mavros_stream_rate.py  inject_uav_camera_sdf.py  spawn_sdf_model_once.py
urdf/: husky_rgb_camera.urdf.xacro  jackal_rgb_camera.urdf.xacro
